updated the ci file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: go build
-        run: go build -v .
+        run: go build -v ./...
 
       - name: Test
         run: go test -v -cover ./...
