--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,25 +1,31 @@
+# This workflow will build a golang project
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
+
 name: ci-test
 
 on:
   push:
-    branches: [master]
+    branches: ["master"]
   pull_request:
-    branches: [master]
+    branches: ["master"]
 
 jobs:
-  test:
-    name: Test
+  build:
+    name: "Build"
     runs-on: ubuntu-latest
-
     steps:
-      - name: Set up Go 1.x
-        uses: actions/setup-go@v2
+      - name: Set up Go
+        uses: actions/setup-go@v4
         with:
-          go-version: ^1.15
+          go-version: "1.24.4"
+          cache: false
         id: go
 
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v2
+      - name: checkout code into the go module directory
+        uses: actions/checkout@v4
+
+      - name: go build
+        run: go build -v ./...
 
       - name: Test
-        run: go test ./... -cover
+        run: go test -v -cover ./...
