--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,20 @@ jobs:
   build:
     name: "Build"
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:12
+        env:
+          POSTGRES_USER: env_user
+          POSTGRES_PASSWORD: secret
+          POSTGRES_DB: simple_bank
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - name: Set up Go
         uses: actions/setup-go@v4
@@ -20,6 +34,12 @@ jobs:
           go-version: "1.24.4"
           cache: false
         id: go
+
+      - name: install goose migration manager
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
+
+      - name: run migrations
+        run: goose -dir ./db/migrations postgres "postgres://env_user:secret@localhost:5432/simple_bank?sslmode=disable" up
 
       - name: checkout code into the go module directory
         uses: actions/checkout@v4
