--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,11 +38,11 @@ jobs:
       - name: install goose migration manager
         run: go install github.com/pressly/goose/v3/cmd/goose@latest
 
-      - name: run migrations
-        run: goose -dir ./db/migrations postgres "postgres://env_user:secret@localhost:5432/simple_bank?sslmode=disable" up
-
       - name: checkout code into the go module directory
         uses: actions/checkout@v4
+
+      - name: run migrations
+        run: goose -dir "./db/migrations" postgres "postgres://env_user:secret@localhost:5432/simple_bank?sslmode=disable" up
 
       - name: go build
         run: go build -v ./...
